# i2c-sensors-emulation

./: .gitignore  CMakeLists.txt  README.md
app/: CMakeLists.txt  main.cpp
include/: measurement_result.hpp
include/i2c/: i2c_comm.hpp
include/sensors/: current_sensor.hpp  power_sensor.hpp  sensor.hpp  sensor_config.hpp  sensor_factory.hpp  sensor_type.hpp  temperature_sensor.hpp  voltage_sensor.hpp
lib/: CMakeLists.txt
lib/i2c/: i2c_comm.cpp
lib/sensors/: current_sensor.cpp  power_sensor.cpp  senros_impl.cpp  sensor_factory.cpp  sensor_impl.cpp  sensor_impl.hpp  temperature_sensor.cpp  voltage_sensor.cpp
